plugin/testData/diagnostics/errors/transparent-nullable-property.kt
import me.mrfang.transparent.Transparent

@Transparent
@JvmInline
value class Name(<!TRANSPARENT_NULLABLE_PROPERTY!>private val s: String?<!>)
